# protein-alignment

./: CMakeLists.txt  ex2.tar  structAlign.cc
